syntax = "proto3";

package products;

option java_multiple_files = true;
option java_outer_classname = "ProductLangServiceProto";

import "google/protobuf/empty.proto";
import "products/common.proto";
import "products/product.proto";

service ProductLangService {
  rpc GetProductLangListByProductId (commons.UUIDValue) returns (stream ProductLang);
  rpc GetProductLangById (ProductLangId) returns (ProductLang);
  rpc CreateProductLang (CreateProductLangRequest) returns (ProductLang);
  rpc DeleteProductLangList (stream ProductLang) returns (google.protobuf.Empty);
  rpc DeleteProductLangListByProductId (commons.UUIDValue) returns (google.protobuf.Empty);
}

message ProductLang {
  uint64 id = 1;
  string productId = 2;
  string title = 3;
  string content = 4;
  string description = 5;
}

message ProductLangId {
  int64 id = 1;
}

message CreateProductLangRequest {
  string title = 1;
  string content = 2;
  string description = 3;
  optional string langCode = 4;

  oneof product_ref {
    string productId = 5;
    Product product = 6;
  }
}

message UpdateProductLangRequest {
  uint64 id = 1;
  string content = 2;
  string description = 3;
  string langCode = 4;

  oneof product_ref {
    string productId = 5;
    Product product = 6;
  }
}
